@@ -1,4 +1,5 @@
 0.1-82
+- pwelch() added
 - plot.sealevel(): make y axis obey range in data subset, if xlim is given
 - adp.2enu() added
 - coastline.world: improve resolution by a factor of 4 or so
